--- a/163评论/PostCell.xib
+++ b/163评论/PostCell.xib
@@ -6,35 +6,52 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="56" id="zXf-Qj-TPk" customClass="PostCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="56" id="zXf-Qj-TPk" customClass="PostCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zXf-Qj-TPk" id="siU-3v-iDb">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWc-lZ-ffa">
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWc-lZ-ffa">
                         <rect key="frame" x="13" y="6" width="217" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100人浏览" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m28-IR-01U">
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100人浏览" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m28-IR-01U">
                         <rect key="frame" x="238" y="5" width="73" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="9Ue-Qx-iWI"/>
+                            <constraint firstAttribute="width" constant="73" id="sNr-tA-Ky6"/>
+                            <constraint firstAttribute="height" constant="21" id="uNL-a3-Mzk"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xDj-EM-KY8">
-                        <rect key="frame" x="13" y="29" width="248" height="21"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="248" translatesAutoresizingMaskIntoConstraints="NO" id="xDj-EM-KY8">
+                        <rect key="frame" x="13" y="29" width="248" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="m28-IR-01U" secondAttribute="trailing" constant="9" id="53e-wa-59G"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="top" secondItem="rWc-lZ-ffa" secondAttribute="bottom" constant="2" id="6BT-Ye-3dv"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="top" secondItem="rWc-lZ-ffa" secondAttribute="bottom" constant="2" id="6Yh-jC-el0"/>
+                    <constraint firstAttribute="trailing" secondItem="xDj-EM-KY8" secondAttribute="trailing" constant="59" id="JVM-2S-Xx3"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="m28-IR-01U" secondAttribute="trailing" constant="9" id="ZJj-vH-Ehr"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="leading" secondItem="siU-3v-iDb" secondAttribute="leading" constant="13" id="kBp-pr-gCh"/>
+                    <constraint firstItem="rWc-lZ-ffa" firstAttribute="top" secondItem="siU-3v-iDb" secondAttribute="top" constant="6" id="r4p-5r-O1I"/>
+                    <constraint firstItem="m28-IR-01U" firstAttribute="top" secondItem="siU-3v-iDb" secondAttribute="top" constant="5" id="tKw-Hd-3QH"/>
+                    <constraint firstItem="m28-IR-01U" firstAttribute="leading" secondItem="rWc-lZ-ffa" secondAttribute="trailing" constant="8" id="v7F-va-xlR"/>
+                    <constraint firstItem="rWc-lZ-ffa" firstAttribute="leading" secondItem="siU-3v-iDb" secondAttribute="leading" constant="13" id="wko-TW-Z9Y"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="excerpt" destination="xDj-EM-KY8" id="jrz-Im-pET"/>
