--- a/163评论/PostCell.xib
+++ b/163评论/PostCell.xib
@@ -4,59 +4,91 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="56" id="zXf-Qj-TPk" customClass="PostCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="110" id="zXf-Qj-TPk" customClass="PostCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zXf-Qj-TPk" id="siU-3v-iDb">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWc-lZ-ffa">
-                        <rect key="frame" x="13" y="6" width="217" height="21"/>
+                        <rect key="frame" x="15" y="15" width="242" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="Bfd-Kb-rji"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BY2-Tw-62o">
+                        <rect key="frame" x="198" y="45" width="64" height="10"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="10" id="NAC-Nc-vqH"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="290" translatesAutoresizingMaskIntoConstraints="NO" id="xDj-EM-KY8">
+                        <rect key="frame" x="15" y="70" width="290" height="20"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="106-s7-VZp">
+                        <rect key="frame" x="15" y="45" width="182" height="10"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="182" id="28f-VI-hIp"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ag1-gq-oFt">
+                        <rect key="frame" x="0.0" y="99" width="320" height="1"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Dxv-uf-eLc"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100人浏览" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m28-IR-01U">
-                        <rect key="frame" x="238" y="5" width="73" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="9Ue-Qx-iWI"/>
-                            <constraint firstAttribute="width" constant="73" id="sNr-tA-Ky6"/>
-                            <constraint firstAttribute="height" constant="21" id="uNL-a3-Mzk"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="237" translatesAutoresizingMaskIntoConstraints="NO" id="xDj-EM-KY8">
-                        <rect key="frame" x="13" y="29" width="237" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="m28-IR-01U" secondAttribute="trailing" constant="9" id="53e-wa-59G"/>
-                    <constraint firstItem="xDj-EM-KY8" firstAttribute="top" secondItem="rWc-lZ-ffa" secondAttribute="bottom" constant="2" id="6BT-Ye-3dv"/>
-                    <constraint firstAttribute="bottom" secondItem="xDj-EM-KY8" secondAttribute="bottom" constant="7" id="6pq-3H-iS2"/>
-                    <constraint firstAttribute="trailing" secondItem="xDj-EM-KY8" secondAttribute="trailing" constant="70" id="JVM-2S-Xx3"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="m28-IR-01U" secondAttribute="trailing" constant="9" id="ZJj-vH-Ehr"/>
-                    <constraint firstItem="xDj-EM-KY8" firstAttribute="leading" secondItem="siU-3v-iDb" secondAttribute="leading" constant="13" id="kBp-pr-gCh"/>
-                    <constraint firstItem="rWc-lZ-ffa" firstAttribute="top" secondItem="siU-3v-iDb" secondAttribute="top" constant="6" id="r4p-5r-O1I"/>
-                    <constraint firstItem="m28-IR-01U" firstAttribute="top" secondItem="siU-3v-iDb" secondAttribute="top" constant="5" id="tKw-Hd-3QH"/>
-                    <constraint firstItem="m28-IR-01U" firstAttribute="leading" secondItem="rWc-lZ-ffa" secondAttribute="trailing" constant="8" id="v7F-va-xlR"/>
-                    <constraint firstItem="rWc-lZ-ffa" firstAttribute="leading" secondItem="siU-3v-iDb" secondAttribute="leading" constant="13" id="wko-TW-Z9Y"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="top" secondItem="106-s7-VZp" secondAttribute="bottom" constant="15" id="02i-by-uBn"/>
+                    <constraint firstItem="BY2-Tw-62o" firstAttribute="top" secondItem="rWc-lZ-ffa" secondAttribute="bottom" constant="8" id="7CW-TK-sEy"/>
+                    <constraint firstAttribute="bottom" secondItem="Ag1-gq-oFt" secondAttribute="bottom" id="BDw-6D-riy"/>
+                    <constraint firstAttribute="trailing" secondItem="BY2-Tw-62o" secondAttribute="trailing" constant="58" id="CSh-50-ldu"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="centerX" secondItem="siU-3v-iDb" secondAttribute="centerX" id="Cvn-7h-LAm"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="xDj-EM-KY8" secondAttribute="bottom" constant="10" id="IDW-mH-nHq"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="top" secondItem="106-s7-VZp" secondAttribute="bottom" constant="15" id="IXQ-Ce-RbN"/>
+                    <constraint firstAttribute="trailing" secondItem="xDj-EM-KY8" secondAttribute="trailing" constant="15" id="JHR-w6-dWq"/>
+                    <constraint firstAttribute="bottom" secondItem="xDj-EM-KY8" secondAttribute="bottom" constant="10" id="NVr-hD-p12"/>
+                    <constraint firstItem="106-s7-VZp" firstAttribute="leading" secondItem="rWc-lZ-ffa" secondAttribute="leading" id="U9N-Ny-5Sm"/>
+                    <constraint firstAttribute="trailing" secondItem="Ag1-gq-oFt" secondAttribute="trailing" id="YHB-Cs-eFF"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="leading" secondItem="siU-3v-iDb" secondAttribute="leading" constant="15" id="Zfr-tI-ljH"/>
+                    <constraint firstItem="BY2-Tw-62o" firstAttribute="leading" secondItem="106-s7-VZp" secondAttribute="trailing" constant="1" id="ag5-mf-qxK"/>
+                    <constraint firstItem="106-s7-VZp" firstAttribute="baseline" secondItem="BY2-Tw-62o" secondAttribute="baseline" id="iT0-pX-0lp"/>
+                    <constraint firstItem="rWc-lZ-ffa" firstAttribute="top" secondItem="siU-3v-iDb" secondAttribute="top" constant="15" id="l2H-DE-qaI"/>
+                    <constraint firstItem="xDj-EM-KY8" firstAttribute="leading" secondItem="106-s7-VZp" secondAttribute="leading" id="pzA-uh-lXs"/>
+                    <constraint firstItem="Ag1-gq-oFt" firstAttribute="leading" secondItem="siU-3v-iDb" secondAttribute="leading" id="qho-ye-acs"/>
+                    <constraint firstItem="rWc-lZ-ffa" firstAttribute="leading" secondItem="siU-3v-iDb" secondAttribute="leading" constant="15" id="xfP-zO-vlC"/>
+                    <constraint firstAttribute="trailing" secondItem="rWc-lZ-ffa" secondAttribute="trailing" constant="63" id="yuT-TN-fPb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="excerpt" destination="xDj-EM-KY8" id="kc8-KN-jnS"/>
-                <outlet property="title" destination="rWc-lZ-ffa" id="bb8-3C-rRo"/>
-                <outlet property="views" destination="m28-IR-01U" id="s2l-Tk-pJ5"/>
+                <outlet property="excerpt" destination="xDj-EM-KY8" id="CgS-Nb-XZZ"/>
+                <outlet property="time" destination="106-s7-VZp" id="Kkq-KW-QSs"/>
+                <outlet property="title" destination="rWc-lZ-ffa" id="PhW-zH-bDK"/>
+                <outlet property="views" destination="BY2-Tw-62o" id="Rcx-h0-zJe"/>
             </connections>
         </tableViewCell>
     </objects>
