--- a/163评论/HomeViewController.xib
+++ b/163评论/HomeViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -16,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gGS-gn-Gev">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="ipR-x9-ySO"/>
@@ -27,10 +28,11 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="gGS-gn-Gev" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="QZo-OO-Yxl"/>
-                <constraint firstItem="gGS-gn-Gev" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="U6q-MF-tfN"/>
+                <constraint firstItem="gGS-gn-Gev" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="U6q-MF-tfN"/>
                 <constraint firstAttribute="bottom" secondItem="gGS-gn-Gev" secondAttribute="bottom" id="UmX-0F-Kar"/>
                 <constraint firstAttribute="trailing" secondItem="gGS-gn-Gev" secondAttribute="trailing" id="ujo-1x-JLO"/>
             </constraints>
+            <point key="canvasLocation" x="139" y="157"/>
         </view>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
